2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Set breakpoints using a constructed SourceLocation
	  instead of looking for it. In this way the breakpoint can be set
	  even if the library is not yet loaded. Other minor fixes.
	* Util.cs: Make sure object references are properly dereferenced. Use
	  new collection adaptors.
	* ICollectionAdaptor.cs, ExpressionEvaluator.cs,
	  Mono.Debugging.Server.Mdb.mdp, ArrayAdaptor.cs,
	  NRefactoryEvaluator.cs, ArrayElementGroup.cs, CollectionAdaptor.cs:
	  When inspecting objects implementing ICollection and IDictionary,
	  show the elements as children of the object, and provide a "Raw
	  View" containing the members of the object.
	* BacktraceWrapper.cs: Provide completion for 'this' reference.
	* ArrayValueReference.cs, FieldReference.cs, PropertyReference.cs,
	  VariableReference.cs: Make sure object references are properly
	  dereferenced.
	* RemoteFrameObject.cs: Don't allow connecting a RemoteFrameObject more
	  than once.
	* Makefile: Added new files.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Implement support for catchpoints.
	* ExpressionEvaluator.cs: Fix pointer issue. Int64 can't be converted
	  to IntPtr in 32bit systems.

2008-07-11  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Fix internal stopping logic.
	* Util.cs, Convert.cs, ExpressionEvaluator.cs, ValueReference.cs,
	  NRefactoryEvaluator.cs: Improved support for generic instance
	  inspection.
	* BacktraceWrapper.cs: Don't remove parameter list of methods with
	  special names.
	* ArrayElementGroup.cs: Improved error catching.

2008-07-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile: Remove incorrect path.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Ignore target events which don't stop the thread.
	* BacktraceWrapper.cs: Fix method name returned by StackFrame.
	* Makefile: Install the assemblies to the correct directory.
